--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "serp-ai-backend",
+  "name": "serp-ai-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TobiasBMB/serp-ai-backend.git"
+    "url": "https://github.com/TobiasBMB/serp-ai-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/TobiasBMB/serp-ai-backend/issues"
+    "url": "https://github.com/TobiasBMB/serp-ai-app/issues"
   },
-  "homepage": "https://github.com/TobiasBMB/serp-ai-backend#readme",
+  "homepage": "https://github.com/TobiasBMB/serp-ai-app#readme",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
@@ -23,5 +25,8 @@
     "express": "^4.21.2",
     "googleapis": "^144.0.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
